--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
-
+​
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
-
+​
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
+​
 </head>
-
+​
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
 <div class="container">
-
+​
   <header>
     <nav>
       <a href="#">Services</a>
@@ -25,7 +25,7 @@
     </nav>
     <img class="logo" src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png" alt="Great Idea! Company logo.">
   </header>
-
+​
   <section class="cta">
     <div class="cta-text">
       <h1>Innovation<br> On<br> Demand</h1>
@@ -33,10 +33,9 @@
     </div>
     <img src="img/header-img.png" alt="Image of a code snippet.">
   </section>
-
+​
   <section class="main-content">
-
-    <div class="top-content">
+​    <div class="top-content">
       <div class="text-content">
         <h4>Features</h4>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -46,9 +45,9 @@
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
     </div>
-
+​
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-
+​
     <div class="bottom-content">
       <div class="text-content">
         <h4>Services</h4>
@@ -63,25 +62,25 @@
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
     </div>
-
+​
   </section>
-
+​
   <section class="contact">
-
+​
     <h4>Contact</h4>
-
+​
     <p>123 Way 456 Street<br> Somewhere, USA</p>
-
+​
     <p>1 (888) 888-8888</p>
-
+​
     <p>sales@greatidea.io</p>
-
+​
   </section>
-
+​
   <footer>
     <p>Copyright Great Idea! 2018</p>
   </footer>
-
+​
 </div><!-- container -->
 </body>
 </html>
